syntax = "proto3""";


option go_package = "github.com/francopoffo/common/api";

package api;

message OrderResponse {
    string ID = 1;
    string customerID = 2;
    string Status = 3;
    repeated Item Items = 4;

}

service OrderService {
    rpc ProcessOrder(CreateOrderRequest) returns (OrderResponse); 
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;
}

message ItemWithQuantity {
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest {
    string customerId = 1; 
    repeated ItemWithQuantity Items = 2;
}

